tests/files/lexer_tests/should_fail/069.cmdr
// Lexer should throw an error when encountering an unknown escape (single quote)
a = 'This is an unknown escape: \y ';